{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 16,
  "lineage": "603cf8d9-2af2-8cbb-cdd3-028baacdeda5",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03b323ad6cddab337",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-6-162-88.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.162.88",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:177996591218:internet-gateway/igw-04bc57ccab5ed36e4",
            "id": "igw-04bc57ccab5ed36e4",
            "owner_id": "177996591218",
            "tags": {
              "Name": "demo2-demo-igw"
            },
            "tags_all": {
              "Name": "demo2-demo-igw"
            },
            "vpc_id": "vpc-0fcabbca4c5f7296c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b323ad6cddab337",
            "connectivity_type": "public",
            "id": "nat-0f1fd575fd769f97a",
            "network_interface_id": "eni-0de225971a01a2bd0",
            "private_ip": "10.0.2.155",
            "public_ip": "3.6.162.88",
            "subnet_id": "subnet-07d03b3110801b88b"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.web_subnet1",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRoutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:177996591218:route-table/rtb-06922a4f833ac9733",
            "id": "rtb-06922a4f833ac9733",
            "owner_id": "177996591218",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f1fd575fd769f97a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo2-demo-nat-rt"
            },
            "tags_all": {
              "Name": "demo2-demo-nat-rt"
            },
            "vpc_id": "vpc-0fcabbca4c5f7296c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.web_subnet1",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:177996591218:route-table/rtb-0faf9cd5f35a319cc",
            "id": "rtb-0faf9cd5f35a319cc",
            "owner_id": "177996591218",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04bc57ccab5ed36e4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo2-demo-web-rt"
            },
            "tags_all": {
              "Name": "demo2-demo-web-rt"
            },
            "vpc_id": "vpc-0fcabbca4c5f7296c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0845190dfdde48930",
            "route_table_id": "rtb-0faf9cd5f35a319cc",
            "subnet_id": "subnet-07d03b3110801b88b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.pubrt",
            "module.vpc.aws_subnet.web_subnet1",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0374bd1baa209e4e9",
            "route_table_id": "rtb-06922a4f833ac9733",
            "subnet_id": "subnet-044fd90cc78a5fd15"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.PrivateRoutetable",
            "module.vpc.aws_subnet.app_subnet1",
            "module.vpc.aws_subnet.web_subnet1",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d620e58389d2bc44",
            "route_table_id": "rtb-06922a4f833ac9733",
            "subnet_id": "subnet-08bc3e44f58366a83"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.PrivateRoutetable",
            "module.vpc.aws_subnet.db_subnet1",
            "module.vpc.aws_subnet.web_subnet1",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00abfefad0bab836f",
            "route_table_id": "rtb-06922a4f833ac9733",
            "subnet_id": "subnet-00fb16d6148d18d3c"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.PrivateRoutetable",
            "module.vpc.aws_subnet.db_subnet2",
            "module.vpc.aws_subnet.web_subnet1",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:177996591218:subnet/subnet-044fd90cc78a5fd15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-044fd90cc78a5fd15",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "177996591218",
            "tags": {
              "Name": "demo2-demo-app-az-1"
            },
            "tags_all": {
              "Name": "demo2-demo-app-az-1"
            },
            "vpc_id": "vpc-0fcabbca4c5f7296c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:177996591218:subnet/subnet-08bc3e44f58366a83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-08bc3e44f58366a83",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "177996591218",
            "tags": {
              "Name": "demo2-demo-db-az-1"
            },
            "tags_all": {
              "Name": "demo2-demo-db-az-1"
            },
            "vpc_id": "vpc-0fcabbca4c5f7296c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:177996591218:subnet/subnet-00fb16d6148d18d3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-00fb16d6148d18d3c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "177996591218",
            "tags": {
              "Name": "demo2-demo-db-az-2"
            },
            "tags_all": {
              "Name": "demo2-demo-db-az-2"
            },
            "vpc_id": "vpc-0fcabbca4c5f7296c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:177996591218:subnet/subnet-07d03b3110801b88b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07d03b3110801b88b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "177996591218",
            "tags": {
              "Name": "demo2-demo-web-az-1"
            },
            "tags_all": {
              "Name": "demo2-demo-web-az-1"
            },
            "vpc_id": "vpc-0fcabbca4c5f7296c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:177996591218:vpc/vpc-0fcabbca4c5f7296c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fc15e63a871a3677",
            "default_route_table_id": "rtb-01109d46a7b959bb7",
            "default_security_group_id": "sg-0f5bf5248beebf01b",
            "dhcp_options_id": "dopt-93c01ef8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fcabbca4c5f7296c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01109d46a7b959bb7",
            "owner_id": "177996591218",
            "tags": {
              "Name": "demo2-demo-vpc"
            },
            "tags_all": {
              "Name": "demo2-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}